--- a/clusters/operations/bootstrap/applicationset-apps.yaml
+++ b/clusters/operations/bootstrap/applicationset-apps.yaml
@@ -5,11 +5,7 @@ metadata:
 spec:
   goTemplate: true
   generators:
-    - clusters:
-        selector:
-          matchLabels:
-            argocd.argoproj.io/secret-type: cluster
-            # name: exoscale-staging
+    - clusters
   template:
     metadata:
       name: "{{ .name }}-applications"
