--- a/clusters/operations/bootstrap/applicationset-apps.yaml
+++ b/clusters/operations/bootstrap/applicationset-apps.yaml
@@ -5,7 +5,11 @@ metadata:
 spec:
   goTemplate: true
   generators:
-    - clusters
+    - clusters:
+        selector:
+          matchLabels:
+            argocd.argoproj.io/secret-type: cluster
+            # name: exoscale-staging
   template:
     metadata:
       name: "{{ .name }}-applications"
