--- a/clusters/bootstrap/appofapps.yaml
+++ b/clusters/bootstrap/appofapps.yaml
@@ -18,7 +18,7 @@ spec:
         directory:
           jsonnet: {}
           recurse: true
-        repoURL: git@github.com:aion-dk/argocd-config.git
+        repoURL: https://github.com/av-rasmus/test-argocd-config.git
         targetRevision: HEAD
         path: clusters/{{ .name }}/apps
       destination:
