--- a/clusters/in-cluster-local/apps/nginx-app.yaml
+++ b/clusters/in-cluster-local/apps/nginx-app.yaml
@@ -7,7 +7,7 @@ spec:
   project: default
   source:
     repoURL: https://charts.bitnami.com/bitnami
-    targetRevision: "19.0.3" # Or specify a specific version
+    targetRevision: ">=9.0.0" # Or specify a specific version
     chart: nginx
     helm:
       values: |
