--- a/clusters/bootstrap/applicationset-nginx.yaml
+++ b/clusters/bootstrap/applicationset-nginx.yaml
@@ -19,9 +19,9 @@ spec:
     spec:
       project: "default"
       source:
-        repoURL: https://kubernetes.github.io/ingress-nginx
-        targetRevision: 4.6.1
-        chart: ingress-nginx
+        repoURL: https://github.com/av-rasmus/test-argocd-config.git
+        targetRevision: HEAD
+        path: "charts/nginx-controller"
         helm:
           ignoreMissingValueFiles: true
           valueFiles:
