--- a/clusters/in-cluster-local/apps/nginx-app.yaml
+++ b/clusters/in-cluster-local/apps/nginx-app.yaml
@@ -13,6 +13,8 @@ spec:
       values: |
         service:
           type: LoadBalancer # Or ClusterIP if you don't need external access
+        ingress:
+          enabled: true
   destination:
     server: https://kubernetes.default.svc
     namespace: nginx # Create a namespace named nginx
