--- a/clusters/in-cluster-local/apps/nginx-app.yaml
+++ b/clusters/in-cluster-local/apps/nginx-app.yaml
@@ -15,6 +15,8 @@ spec:
           type: LoadBalancer # Or ClusterIP if you don't need external access
         ingress:
           enabled: true
+        hostname:
+          web-server-test.local
   destination:
     server: https://kubernetes.default.svc
     namespace: nginx # Create a namespace named nginx
