outcomment tolerations for nodeselector

--- a/clusters/in-cluster-local/bootstrap/nginx/values.yaml
+++ b/clusters/in-cluster-local/bootstrap/nginx/values.yaml
@@ -28,18 +28,18 @@ ingress-nginx:
         "service.beta.kubernetes.io/exoscale-loadbalancer-id": "19b75f0b-841b-40d9-80da-7b9c084d9b31"
         "service.beta.kubernetes.io/exoscale-loadbalancer-external": "true"
         "service.beta.kubernetes.io/exoscale-loadbalancer-service-instancepool-id": "865afddb-2ada-403a-ae50-24a2e1e04f75"
-    nodeSelector:
-      "k8s.assemblyvoting.net/pool": ingress
-    tolerations:
-      - key: "visibility"
-        operator: "Equal"
-        value: "ingress"
-    config:
-      "use-proxy-protocol": "false"
-  defaultBackend:
-    nodeSelector:
-      "k8s.assemblyvoting.net/pool": "ingress"
-    tolerations:
-      - key: "visibility"
-        operator: "Equal"
-        value: "ingress"
+  #   nodeSelector:
+  #     "k8s.assemblyvoting.net/pool": ingress
+  #   tolerations:
+  #     - key: "visibility"
+  #       operator: "Equal"
+  #       value: "ingress"
+  #   config:
+  #     "use-proxy-protocol": "false"
+  # defaultBackend:
+  #   nodeSelector:
+  #     "k8s.assemblyvoting.net/pool": "ingress"
+  #   tolerations:
+  #     - key: "visibility"
+  #       operator: "Equal"
+  #       value: "ingress"
