--- a/clusters/in-cluster-local/apps/rancher-app.yaml
+++ b/clusters/in-cluster-local/apps/rancher-app.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: nginx-staging
+  name: rancher
   namespace: argocd
 spec:
   project: default
