--- a/clusters/in-cluster-local/apps/rancher-app.yaml
+++ b/clusters/in-cluster-local/apps/rancher-app.yaml
@@ -11,6 +11,7 @@ spec:
     chart: rancher
     helm:
       values: |
+        agentTLSMode: system-store
   destination:
     server: https://kubernetes.default.svc
     namespace: cattle-system
