--- a/clusters/in-cluster-local/apps/rancher/rancher.yaml
+++ b/clusters/in-cluster-local/apps/rancher/rancher.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: rancher-app
+  name: rancher
   namespace: argocd
 spec:
   project: default
@@ -18,6 +18,7 @@ spec:
   syncPolicy:
     automated:
       prune: true
+      allowEmpty: true
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
