--- a/clusters/in-cluster-local/apps/rancher-app/values.yaml
+++ b/clusters/in-cluster-local/apps/rancher-app/values.yaml
@@ -1,8 +1,9 @@
 ingress:
   enabled: true
   servicePort: 80
+  hosts:
+    - rancher.local
 tls:
   # options: rancher, letsEncrypt, secret
   source: rancher
   secretName: tls-rancher-ingress
-hostname: rancher.local
