--- a/clusters/in-cluster-local/apps/rancher/values.yaml
+++ b/clusters/in-cluster-local/apps/rancher/values.yaml
@@ -1,9 +1,10 @@
-ingress:
-  enabled: true
-  servicePort: 80 
-tls:
-  # options: rancher, letsEncrypt, secret
-  source: rancher
-  secretName: tls-rancher-ingress
-  hosts:
-    - rancher.local
+spec:
+  ingress:
+    enabled: true
+    servicePort: 80 
+  tls:
+    # options: rancher, letsEncrypt, secret
+    source: rancher
+    secretName: tls-rancher-ingress
+    hosts:
+      - rancher.local
