add to tls aswell

--- a/clusters/in-cluster-local/apps/rancher/values.yaml
+++ b/clusters/in-cluster-local/apps/rancher/values.yaml
@@ -7,6 +7,8 @@ ingress:
     - rancher.local
   tls:
     source: rancher
+    hosts:
+      - rancher.local
 resources:
   requests:
     cpu: 250m
