--- a/clusters/in-cluster-local/apps/rancher/values.yaml
+++ b/clusters/in-cluster-local/apps/rancher/values.yaml
@@ -1,10 +1,7 @@
-hostname: localhost
+hostname: rancher.local
 ingress:
   enabled: true
   className: nginx
-  hostname: rancher.localhost
-  hosts:
-    - rancher.local
   tls:
     source: rancher
     hosts:
