--- a/clusters/in-cluster-local/apps/rancher/rancher-app.yaml
+++ b/clusters/in-cluster-local/apps/rancher/rancher-app.yaml
@@ -14,6 +14,9 @@ spec:
     helm:
       values: |
         hostname: rancher.local
+        ingress:
+          hosts:
+            - rancher.local
   destination:
     server: https://kubernetes.default.svc
     namespace: cattle-system
